MQO2FBX/MQO.cpp
/* Generated by re2c 0.13.7.5 on Fri Apr 17 21:29:26 2015 */

#include "stdafx.h"

typedef unsigned char uchar;
typedef unsigned int uint;

#define	YYCTYPE		uchar
#define	YYCURSOR	cursor
#define	YYLIMIT		s->lim
#define	YYMARKER	s->ptr

#define	RET(i)	{s->cur = cursor; return i;}
#define	RETT(i, typeid)	{s->cur = cursor; s->type = typeid; return i;}

class CMYMaterial
{
public:
  CMYMaterial() : shader(SHADER_Phong), uid(0), vcol(false), dbls(false), dif(0.8), amb(0.6), emi(0.0), spc(0.0), power(5.0), reflect(0.0), refract(1.0), proj_type(PROJTYPE_UV)
  {
    for(int i=0;i<4;i++)col[i]=1.0;
    for(int i=0;i<3;i++)
    {
      proj_scale[i]=1.0;
      proj_pos[i] = proj_angle[i] = amb_col[i] = emi_col[i] = spc_col[i] = 0;
    }
  }
public:
  CString name;
  enum SHADER {SHADER_Classic = 0, SHADER_Constant, SHADER_Lambert, SHADER_Phong, SHADER_Blinn } shader;
  uint uid;
  bool vcol;
  bool dbls; //double face
  double col[4];
  double dif;
  double amb;
  double amb_col[3];
  double emi;
  double emi_col[3];
  double spc;
  double spc_col[3];
  double power;
  double reflect;
  double refract;
  CString tex;
  CString aplane;
  CString bump;
  enum PROJTYPE {PROJTYPE_UV=0, PROJTYPE_PLANE, PROJTYPE_CYLINDER, PROJTYPE_SPHERE} proj_type;
  double proj_pos[3];
  double proj_scale[3];
  double proj_angle[3];
};

class CMYVertex
{
public:
  CMYVertex(double _x, double _y, double _z)
  {
    x = _x;
    y = _y;
    z = _z;
  }
	double x, y, z;
};

class CMYFace
{
public:
  CMYFace() : M(0), V(NULL), UV(NULL), COL(NULL)
  {
  }
  ~CMYFace()
  {
    if(V)
    {
      delete V;
      V = NULL;
    }
    if(UV)
    {
      delete UV;
      UV = NULL;
    }
    if(COL)
    {
      delete COL;
      COL = NULL;
    }
  }
  CAtlArray<uint> *V;
  int M;
  CAtlArray<double> *UV;
  CAtlArray<COLORREF> *COL;
//  CAtlArray<double> *CRS;
};

class CMYObject
{
public:
  CMYObject() : vertex(NULL), face(NULL), pFbxNode(NULL), vertexattrUID(NULL)
  {
  }
  ~CMYObject()
  {
    if(vertex)
    {
      size_t m=vertex->GetCount();;
      for(size_t i=0;i<m;i++)delete (*vertex)[i];
	  delete vertex;
      vertex = NULL;
    }
    if(face)
    {
      size_t m=face->GetCount();;
      for(size_t i=0;i<m;i++)delete (*face)[i];
	  delete face;
      face = NULL;
    }
    if(vertexattrUID)
    {
	  delete vertexattrUID;
      vertexattrUID = NULL;
    }
  }
  FbxNode *pFbxNode;
  CString name;
  int uid;
  int depth;
  bool folding;
  double scale[3];
  double rotation[3];
  double translation[3];
  //enum {PATCH_PLANE=0, PATCH_SPLINE1, PATCH_SPLINE2, PATCH_CATMULLCLARK, PATCH_OPENSUBDIV} patch;
  //bool patchtri;
  //int segment;
  //bool visible;
  //bool locking;
  enum SHADING {SHADING_FLAT=0, SHADING_GLOW} shading;
  //double facet;
  double color[3];
  bool color_type;
  //enum MIRROR {MIRROR_NONE=0, MIRROR_SPLIT, MIRROR_CONNECT} mirror;
  //enum MIRRORAXIS {MIRRORAXIS_X=0, MIRRORAXIS_Y, MIRRORAXIS_Z} mirroraxis;
  //double mirror_dis;
  //bool lathe;
  //enum LATHEAXIS {LATHEAXIS_X=0, LATHEAXIS_Y, LATHEAXIS_Z} lathe_axis;
  //int lathe_seg;
  CAtlArray<CMYVertex*> *vertex;
  CAtlArray<CMYFace*> *face;
  CAtlArray<int> *vertexattrUID;
};

class CMYBone
{
  public:
    CMYBone() : parent(NULL), id(0), P(0), rtX(0), rtY(0), rtZ(0), tpX(0), tpY(0), tpZ(0), rotB(0), rotH(0), rotP(0), mvX(0), mvY(0), mvZ(0), scX(0), scY(0), scZ(0), fbxNode(NULL)
    {
    }
    ~CMYBone()
    {
    }
    CMYBone *parent;
    CAtlArray<CMYBone*> childs;
    int id;
    CString name;
    FbxNode *fbxNode;
    
    int P;
    CAtlArray<int> C;
    CAtlArray<int> oi;
    CAtlArray<int> vi;
    CAtlArray<double> w;
    
    double rtX, rtY, rtZ;
    double tpX, tpY, tpZ;
    double rotB, rotH, rotP;
    double mvX, mvY, mvZ;
    double scX, scY, scZ;
};

class CMYMQO
{
public:
  int m_currentMaterialIndex;
  CAtlArray<CMYMaterial*> m_materials;
  CAtlArray<CMYObject*> m_objects;
  CAtlArray<CMYBone> m_bones;
//  CAtlArray<int> m_boneObjIndex;
  
  CMYMQO() : m_currentMaterialIndex(-1)
  {
  }
  
  ~CMYMQO()
  {
    int s = m_materials.GetCount();
    for(int i=0;i<s;i++)
    {
      delete m_materials[i];
    }
    m_materials.RemoveAll();
  }
  
  CMYMaterial* GetCurrentMaterial()
  {
    if(m_currentMaterialIndex==-1)
    {
      CMYMaterial *pMat = new CMYMaterial();
      if(pMat==NULL)return NULL;
      m_materials.Add(pMat);
      m_currentMaterialIndex = m_materials.GetCount()-1;
      return pMat;
    } else {
      return m_materials[m_currentMaterialIndex];
    }
  }
  CMYMaterial* ClearCurrentMaterial()
  {
    m_currentMaterialIndex = -1;
  }
  void AddMaterial(CMYMaterial *pMat)
  {
    m_materials.Add(pMat);
  }
  
  CMYBone *AddBone(const char *name)
  {
    int idx = m_bones.Add();
    m_bones[idx].name = name;
    return &(m_bones[idx]);
  }
  CMYBone *FindBone(int id)
  {
    int m = m_bones.GetCount();
    for(int i=0;i<m;i++)
    {
      if(m_bones[i].id==id)return &(m_bones[i]);
    }
    return NULL;
  }
};

class __CMyVertexAttr
{
public:
  __CMyVertexAttr() : uid(NULL)
  {
  }
  CAtlArray<int> *uid;
};

typedef struct PassData
{
  union {
    __int64 i;
    double dbl;
    CString *str;
  };
} PassData;

typedef struct Scanner
{
    int			fd;
    uchar		*bot, *tok, *ptr, *cur, *pos, *lim, *top, *eof;
    uint		line;
    PassData val;
} Scanner;

/*enum {
 TAG_MetasequoiaDocument, TAG_FormatTextVer11, TAG_Thumbnail, TAG_IncludeXml, TAG_Scene, TAG_pos, TAG_lookat, TAG_head, TAG_pich, TAG_bank, TAG_ortho, TAG_zoom2, TAG_amb, TAG_frontclip, TAG_backclip, TAG_dirlights, TAG_light, TAG_dir, TAG_color, 
 TAG_Material, TAG_shader, TAG_vcol, TAG_dbls, TAG_col, TAG_uid, TAG_dif, TAG_amb, TAG_emi, TAG_spc, TAG_power, TAG_reflect, TAG_refract, TAG_tex, TAG_aplane, TAG_bump, TAG_proj_type, TAG_proj_pos, TAG_proj_scale, TAG_proj_angle, 
 TAG_Object, TAG_depth, TAG_folding, TAG_scale, TAG_rotation, TAG_translation, TAG_patch, TAG_patchtri, TAG_segment, TAG_visible, TAG_locking, TAG_shading, TAG_facet, TAG_color, TAG_color_type, TAG_mirror, TAG_mirror_axis, TAG_mirror_dis, TAG_lathe, TAG_lathe_axis, TAG_lathe_seg, TAG_vertex, TAG_BVertex, TAG_vertexattr, TAG_weit, TAG_face, TAG_V, TAG_M, TAG_UID, TAG_UV, TAG_COL, TAG_CRS, TAG_Blob, 
 TAG_Eof};*/


#include "MQOParser.h"
#include "MQOParser.c"


CString ReadStr(uchar *token, uint len)
{
  CStringA tmpA;
  tmpA.SetString((const char *)token, len);
  CStringW tmpB = CA2W(tmpA, CP_UTF8);
  tmpB.Replace(L"%", L"%%");
  CString retStr;
  retStr.Format(tmpB);
  return retStr;
}

BOOL fill(int n) { return FALSE; }

int scan(Scanner *s){
	uchar *cursor = s->cur;
std:
	s->tok = cursor;



{
	YYCTYPE yych;
	unsigned int yyaccept = 0;

	if ((YYLIMIT - YYCURSOR) < 20) if(!fill(20)) { return 0; }
	yych = *YYCURSOR;
	switch (yych) {
	case '\t':
	case ' ':	goto yy32;
	case '\n':	goto yy49;
	case '\v':
	case '\f':	goto yy48;
	case '\r':	goto yy51;
	case 0x1A:	goto yy46;
	case '"':	goto yy37;
	case '(':	goto yy38;
	case ')':	goto yy40;
	case '+':
	case '-':	goto yy31;
	case '.':	goto yy36;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy34;
	case 'B':	goto yy9;
	case 'C':	goto yy29;
	case 'E':	goto yy30;
	case 'F':	goto yy4;
	case 'I':	goto yy7;
	case 'M':	goto yy2;
	case 'O':	goto yy21;
	case 'S':	goto yy8;
	case 'T':	goto yy6;
	case 'U':	goto yy28;
	case 'V':	goto yy26;
	case 'a':	goto yy15;
	case 'b':	goto yy20;
	case 'c':	goto yy10;
	case 'd':	goto yy13;
	case 'e':	goto yy16;
	case 'f':	goto yy22;
	case 'l':	goto yy23;
	case 'm':	goto yy24;
	case 'p':	goto yy17;
	case 'r':	goto yy18;
	case 's':	goto yy11;
	case 't':	goto yy19;
	case 'u':	goto yy14;
	case 'v':	goto yy12;
	case 'w':	goto yy25;
	case '{':	goto yy42;
	case '}':	goto yy44;
	default:	goto yy52;
	}
yy2:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'a':	goto yy395;
	case 'e':	goto yy396;
	default:	goto yy3;
	}
yy3:
	{ RET(TAG_M); }
yy4:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'o':	goto yy376;
	default:	goto yy5;
	}
yy5:
	{
    ATLTRACE("unexpected character: %c\n", *s->tok);
    goto std;
  }
yy6:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'h':	goto yy367;
	default:	goto yy5;
	}
yy7:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'n':	goto yy357;
	default:	goto yy5;
	}
yy8:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'c':	goto yy352;
	default:	goto yy5;
	}
yy9:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'V':	goto yy333;
	case 'a':	goto yy334;
	case 'l':	goto yy332;
	default:	goto yy5;
	}
yy10:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'o':	goto yy320;
	default:	goto yy5;
	}
yy11:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'c':	goto yy292;
	case 'e':	goto yy291;
	case 'h':	goto yy290;
	case 'p':	goto yy293;
	default:	goto yy5;
	}
yy12:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'c':	goto yy270;
	case 'e':	goto yy268;
	case 'i':	goto yy269;
	default:	goto yy5;
	}
yy13:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'b':	goto yy258;
	case 'e':	goto yy256;
	case 'i':	goto yy257;
	default:	goto yy5;
	}
yy14:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'i':	goto yy253;
	default:	goto yy5;
	}
yy15:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'm':	goto yy240;
	case 'p':	goto yy239;
	default:	goto yy5;
	}
yy16:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'm':	goto yy231;
	default:	goto yy5;
	}
yy17:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'a':	goto yy192;
	case 'o':	goto yy194;
	case 'r':	goto yy193;
	default:	goto yy5;
	}
yy18:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'e':	goto yy173;
	case 'o':	goto yy172;
	default:	goto yy5;
	}
yy19:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'e':	goto yy159;
	case 'r':	goto yy158;
	default:	goto yy5;
	}
yy20:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'u':	goto yy154;
	default:	goto yy5;
	}
yy21:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'b':	goto yy148;
	default:	goto yy5;
	}
yy22:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'a':	goto yy135;
	case 'o':	goto yy136;
	default:	goto yy5;
	}
yy23:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'a':	goto yy113;
	case 'o':	goto yy114;
	default:	goto yy5;
	}
yy24:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'i':	goto yy97;
	default:	goto yy5;
	}
yy25:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'e':	goto yy93;
	default:	goto yy5;
	}
yy26:
	++YYCURSOR;
	{ RET(TAG_V); }
yy28:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'I':	goto yy90;
	case 'V':	goto yy88;
	default:	goto yy5;
	}
yy29:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'O':	goto yy83;
	case 'R':	goto yy82;
	default:	goto yy5;
	}
yy30:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'o':	goto yy79;
	default:	goto yy5;
	}
yy31:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\t':
	case ' ':	goto yy77;
	case '.':	goto yy76;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy70;
	default:	goto yy5;
	}
yy32:
	yyaccept = 2;
	yych = *(YYMARKER = ++YYCURSOR);
	goto yy75;
yy33:
	{ if(cursor == s->eof)RET(0); goto std; }
yy34:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '.':	goto yy72;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy70;
	default:	goto yy35;
	}
yy35:
	{ uchar *start = s->tok;
				bool bMinus = false;
				if(*start == '-')bMinus = true;
				while(*start<'0' || *start>'9')start++;
				CStringA tmp;
				tmp.SetString((const char *)(start), cursor - start);
				s->val.i = bMinus ? -_atoi64(tmp) : _atoi64(tmp);
				RET(INTVAL); }
yy36:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy67;
	default:	goto yy5;
	}
yy37:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy5;
	default:	goto yy57;
	}
yy38:
	++YYCURSOR;
	{ RET(BR3); }
yy40:
	++YYCURSOR;
	{ RET(BR4); }
yy42:
	++YYCURSOR;
	{ RET(BR1); }
yy44:
	++YYCURSOR;
	{ RET(BR2); }
yy46:
	++YYCURSOR;
	{ RET(0);/*EOF*/ }
yy48:
	yych = *++YYCURSOR;
	goto yy55;
yy49:
	++YYCURSOR;
yy50:
	{
    if(cursor == s->eof)RET(0);
    s->pos = cursor; s->line++;
    goto std;
  }
yy51:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy53;
	default:	goto yy50;
	}
yy52:
	yych = *++YYCURSOR;
	goto yy5;
yy53:
	yych = *++YYCURSOR;
	goto yy50;
yy54:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) if(!fill(1)) { return 0; }
	yych = *YYCURSOR;
yy55:
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy54;
	default:	goto yy33;
	}
yy56:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) if(!fill(1)) { return 0; }
	yych = *YYCURSOR;
yy57:
	switch (yych) {
	case '\n':	goto yy58;
	case '"':	goto yy60;
	case '\\':	goto yy59;
	default:	goto yy56;
	}
yy58:
	YYCURSOR = YYMARKER;
	switch (yyaccept) {
	case 0: 	goto yy3;
	case 1: 	goto yy5;
	case 2: 	goto yy33;
	case 3: 	goto yy102;
	case 4: 	goto yy124;
	case 5: 	goto yy226;
